# solana-signers

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  typescript-ci.yml
docs/: ADDING_SIGNERS.md
scripts/: test-local-validator.sh
src/: error.rs  lib.rs  test_util.rs  traits.rs  transaction_util.rs
src/memory/: keypair_util.rs  mod.rs
src/privy/: mod.rs  types.rs
src/sdk_adapter/: v2.rs  v3.rs
src/tests/: litesvm_util.rs  mod.rs  rpc_util.rs  start-vault.sh  test_privy_integration.rs  test_turnkey_integration.rs  test_vault_integration.rs
src/turnkey/: mod.rs  types.rs
src/vault/: mod.rs
typescript/: .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  vitest.config.integration.ts
typescript/examples/: package.json
typescript/scripts/: .env.example  README.md  package.json  test-privy.ts  test-signer.ts  tsconfig.json
