[package]
name = "solana-signers"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Framework-agnostic Solana signing abstractions"
repository = "https://github.com/solana-foundation/solana-signers"
keywords = ["solana", "blockchain", "signer", "wallet", "crypto"]

[features]
default = ["memory"]
memory = []
vault = ["dep:reqwest", "dep:vaultrs"]
privy = ["dep:reqwest"]
turnkey = ["dep:reqwest", "dep:p256", "dep:hex", "dep:chrono"]
all = ["memory", "vault", "privy", "turnkey"]

# WARNING: DO NOT ENABLE IN PRODUCTION
# This feature logs full API error responses which may contain sensitive information
# Only use for local development/debugging
unsafe-debug = []

[dependencies]
# Solana SDK
solana-sdk = "2.3.0"

# Core dependencies
async-trait = "0.1.89"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4.28"
bs58 = "0.5.1"

# Optional dependencies (feature-gated)
reqwest = { version = "0.12.23", optional = true, features = ["json"] }
vaultrs = { version = "0.7.4", optional = true }
p256 = { version = "0.13.2", optional = true }
hex = { version = "0.4.3", optional = true }
chrono = { version = "0.4.42", optional = true }

# Core dependencies (used by all signers for transaction serialization)
bincode = "1.3"
base64 = "0.22.1"

[dev-dependencies]
tokio = { version = "1.47", features = ["test-util", "macros", "rt"] }
wiremock = "0.6"
rand = "0.8.0"
solana-system-interface = "1.0.0"
